exports[`test no Applications link 1`] = `
Array [
  Object {
    "x": 110,
    "y": 150,
  },
  Object {
    "path": "/Applications/TextEdit.app",
    "type": "link",
    "x": 410,
    "y": 440,
  },
]
`;

exports[`test no background 1`] = `
Array [
  Object {
    "file": "NoBackground-1.1.0.dmg",
    "safeArtifactName": "TestApp-1.1.0.dmg",
  },
]
`;

exports[`test no build directory 1`] = `undefined`;

exports[`test unset dmg icon 1`] = `
Array [
  Object {
    "file": "Test ß No Volume Icon-1.1.0.dmg",
    "safeArtifactName": "TestApp-1.1.0.dmg",
  },
]
`;
